[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://background images/unilifemenu1280x720.png" type="Texture" id=2]
[ext_resource path="res://fonts/Pixeled.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]

size = 30
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Settings" ]

[sub_resource type="DynamicFont" id=2]

size = 30
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Resource", "Settings" ]

[sub_resource type="DynamicFont" id=3]

size = 30
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=4]

size = 28
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="MainMenu" type="CanvasLayer" index="0"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )
script = ExtResource( 1 )

[node name="MenuBackground" type="Sprite" parent="." index="0"]

position = Vector2( 643.02, 362.43 )
texture = ExtResource( 2 )

[node name="StartButton" type="Button" parent="." index="1" groups=[
"MainButtons",
]]

anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0
margin_left = -200.0
margin_top = 350.0
margin_right = 200.0
margin_bottom = 440.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Start game"
flat = false
align = 1
_sections_unfolded = [ "Margin", "Rect", "custom_fonts" ]

[node name="HelpButton" type="Button" parent="." index="2" groups=[
"MainButtons",
]]

anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0
margin_left = -200.0
margin_top = 450.0
margin_right = 200.0
margin_bottom = 540.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Instructions"
flat = false
align = 1
_sections_unfolded = [ "Margin", "Rect", "custom_fonts" ]

[node name="QuitButton" type="Button" parent="." index="3" groups=[
"MainButtons",
]]

anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0
margin_left = -200.0
margin_top = 550.0
margin_right = 200.0
margin_bottom = 640.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Quit game"
flat = false
align = 1
_sections_unfolded = [ "Margin", "Rect", "custom_fonts" ]
__meta__ = {
"_edit_lock_": true
}

[node name="BackButton" type="Button" parent="." index="4" groups=[
"HelpMenu",
]]

anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0
margin_left = -200.0
margin_top = 550.0
margin_right = 200.0
margin_bottom = 640.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Back"
flat = false
align = 1
_sections_unfolded = [ "Margin", "Rect", "custom_fonts" ]
__meta__ = {
"_edit_lock_": true
}

[node name="HelpBackground" type="Panel" parent="." index="5" groups=[
"HelpMenu",
]]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -360.0
margin_top = -190.0
margin_right = 360.0
margin_bottom = 181.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Rect" ]

[node name="HelpText" type="RichTextLabel" parent="." index="6" groups=[
"HelpMenu",
]]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -325.0
margin_top = -177.0
margin_right = 347.0
margin_bottom = 169.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/normal_font = SubResource( 4 )
bbcode_enabled = false
bbcode_text = ""
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = ""
scroll_active = true
scroll_following = false
selection_enabled = false
override_selected_font_color = false
_sections_unfolded = [ "Grow Direction", "Margin", "Rect" ]

[node name="SoundPlayer" type="AudioStreamPlayer" parent="." index="7"]

stream = null
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"


